Normalização dos Webservices
